--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -18,10 +18,7 @@
 
 #topbar-right
 {
-	float: right;
-	display: inline-block;
-	height: 20px;
-	width: 80px;
+	display: none;
 
 }
 
@@ -37,7 +34,7 @@
 
 #mainbar
 {
-	height: 80px;
+	height: 60px;
 	width: 100%;
 }
 
@@ -48,11 +45,15 @@
 
 #mainbar h1
 {
-	font-family: Hofstad, Verdana, sans-serif;
 	text-align: center;
 	font-variant: small-caps;
+	font-size: 1.8em;
+	padding: 0px;
+	margin: 0px;
+	padding-top: 15px;
 	width: 100%;
-	font-size: 2.1em;
+	white-space: nowrap;
+
 
 }
 
@@ -61,6 +62,8 @@
 	display: none;
 
 }
+
+
 
 
 #mainbanner
@@ -78,12 +81,10 @@
 	height: 100%;
 	width: 100%;
 	background-image: url('../img/bridge-mobile.jpg');
-	background-color: #3F4136;
 }
 
 #followerbanner
 {
-	background-color: #3F4136;
 	width: 100%;
 	height: 20px;
 	margin-top: -5px;
@@ -123,8 +124,6 @@
 
 #banner-action-button
 {
-	background-color: #580000;
-	border-color: #580000;
 	padding: 10px;
 	font-size: 1.5em;
 	text-transform: uppercase;
