--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -6,8 +6,6 @@
 	height: 40px;
 	width: 100%;
 
-	background-color: #3F4136;
-
 }
 
 #topbar-left
@@ -18,16 +16,11 @@
 
 #topbar-right
 {
-	float: right;
-	display: inline-block;
-	height: 40px;
-	width: 80px;
 
 }
 
 #signin-button
 {
-	background-color: #580000;
 	height: 100%;
 	width: 100%;
 	text-align: center;
@@ -46,7 +39,6 @@
 {
 	height: 100px;
 	width: 100%;
-	background-color: #FFFFFF;
 }
 
 #mainbar-container
@@ -56,16 +48,29 @@
 
 #mainbar h1
 {
-	font-family: Hofstad, Verdana, sans-serif;
-	float: left;
+	text-align: center;
+	width: 100%;
 	font-variant: small-caps;
 	font-size: 2.0em;
 
 }
 
+#mainbar h1
+{
+	text-align: center;
+	font-variant: small-caps;
+	font-size: 2.0em;
+	padding: 0px;
+	margin: 0px;
+	padding-top: 35px;
+	width: 100%;
+	white-space: nowrap;
+
+
+}
+
 #mainbar-headerlinks
 {
-	font-family: Verdana, sans-serif;
 	float: right;
 	font-variant: small-caps;
 
@@ -73,16 +78,11 @@
 
 #mainbar-headerlinks > ul > li
 {
-	display: inline-block;
-	list-style: none;
-	font-size: 1.2em;
-	padding-top: 26px;
-	padding-left: 10px;
+	display: none;
 }
 
 #mainbar-headerlinks > ul > li > a
 {
-	color: black;
 }
 
 #mainbanner
@@ -99,14 +99,11 @@
 	background-size: cover;
 	height: 100%;
 	width: 100%;
-	background-image: url('../img/bridge.jpg');
-	background-color: #3F4136;
 }
 
 
 #followerbanner
 {
-	background-color: #3F4136;
 	width: 100%;
 	height: 20px;
 	margin-top: -5px;
@@ -153,14 +150,11 @@
 	top: 180px;
 	right: 0px;
 	width: 25%;
-	color: #D6C376;
 	z-index: 1;
 }
 
 #banner-action-button
 {
-	background-color: #580000;
-	border-color: #580000;
 	padding: 20px;
 	margin-top: 40px;
 	font-size: 2.5em;
@@ -183,17 +177,6 @@
 	font-size: 1.5em;
 	padding-top: 30px;
 }
-
-.outline
-{
-	text-shadow:
-       3px 3px 0 #000,
-     -1px -1px 0 #000,  
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-       1px 1px 0 #000;
-}
-
 #howitworks-content
 {
 	text-align: center;
