--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -70,7 +70,7 @@ html, body
 
 #signin-button
 {
-	background-color: #580000;
+	/*background-color: #580000;*/
 	height: 100%;
 	width: 100%;
 	text-align: center;
@@ -81,7 +81,8 @@ html, body
 #signin-button a
 {
 
-	color: #D6C376;
+	/*color: #D6C376;*/
+	color: #bbb;
 }
 
 
@@ -232,9 +233,8 @@ html, body
 	border-color: #580000;
 	padding: 20px;
 	margin-top: 40px;
-	font-size: 2.5em;
+	font-size: 1.5em;
 	text-transform: uppercase;
-	font-weight: bold;
 	color: #fff;
 }
 
