Start button smaller on mobile

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -43,6 +43,16 @@ html, body
 	height: 100%;
 }
 
+.non-mobile-block-only
+{
+	display: block;
+}
+
+.mobile-block-only
+{
+	display: none;
+}
+
 /* Home */
 #topbar
 {
@@ -237,6 +247,8 @@ html, body
 	text-transform: uppercase;
 	color: #fff;
 }
+
+
 
 #banner-shouter
 {
