--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -203,5 +203,57 @@
 
 /* END Home */
 
+/* Features */
+
+.mockup
+{
+	padding-bottom: 15px;
+	padding-top: 20px;
+}
+
+#features-website-left
+{
+	width: 100%;
+	height: 400px;
+	display: block;
+	
+}
+
+#features-website-right
+{
+	width: 100%;
+	height: 1300px;
+	display: block;
+}
+
+#features-website-right > h2
+{
+	padding-top: 30px;
+	font-size: 1.5em;
+	letter-spacing: 2px;
+	font-weight: bold;
+}
+
+#features-website-right > p
+{
+	font-size: 1.3em;
+}
+
+
+.figure
+{
+	display: block;
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+#mockup-ipad
+{
+	width: 100%;
+	padding-top: inherit;
+	padding-bottom: 15px;
+}
+
+
 
 }
