--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -211,7 +211,7 @@
 	padding-top: 20px;
 }
 
-#features-website-left
+.features-image
 {
 	width: 100%;
 	height: 400px;
@@ -219,11 +219,18 @@
 	
 }
 
-#features-website-right
+.features-text
 {
 	width: 100%;
 	height: 1350px;
 	display: block;
+}
+
+.features-footer
+{
+	width: 100%;
+	height: 10px;
+	background-color: #3F4136;
 }
 
 #features-website-right > h2
@@ -257,7 +264,19 @@
 #mockups-container
 {
 	width: 100%;
-	margin: inherit;
+	margin: 0px;
+	padding: 0px;
+}
+
+.non-container-row > div
+{
+	width: 90%;
+}
+
+.one-third-stacking-col
+{
+	width: 100%;
+	display: block;
 }
 
 
