--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -448,7 +448,7 @@ html, body
 
 #features-customize-left > p
 {
-	margin-top: 20px;
+	margin-top: 120px;
 }
 
 #features-customize-left
@@ -460,11 +460,31 @@ html, body
 
 #features-customize-right
 {
-	background-position: center top;
+	background-position: top top;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-image: url('../img/computercouple.jpg');
+	background-image: url('../img/imacdesk.jpg');
 	background-color: #3F4136;
+}
+
+#features-video-container
+{
+	display: table;
+	width: 100%;
+	height: 100%;
+}
+
+#features-video-embed
+{
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+}
+
+#features-video-embed-content
+{
+	padding: 5px;
+	background-color: #000;
 }
 
 .btn-features-cta
@@ -480,10 +500,6 @@ html, body
 
 #btn-features-cta-customize
 {
-	margin-top: 0px;
+	margin-top: 100px;
 }
 
-#features-video-embed
-{
-	margin-top: 20px;
-}
