--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -219,6 +219,30 @@
 
 /* END Home */
 
+/* features */
+
+#features-video-embed
+{
+	display: block;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+#features-video-embed-content
+{
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
+
+/* END features */
+
 
 
 }
