--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -222,7 +222,7 @@
 .features-text
 {
 	width: 100%;
-	height: 1350px;
+	height: 100%;
 	display: block;
 }
 
@@ -277,6 +277,35 @@
 {
 	width: 100%;
 	display: block;
+}
+
+#features-video-embed
+{
+	display: block;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+#features-video-embed-content
+{
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#features-customize-left p
+{
+	margin: 0px;
+	padding: 20px;
+}
+
+#btn-features-cta-customize
+{
+	display: none;
 }
 
 
