--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -65,6 +65,7 @@
 
 }
 
+
 #mainbar-headerlinks
 {
 	display: none;
@@ -180,6 +181,11 @@
 #howitworks-cols
 {
 	margin-top: 60px;
+}
+
+#howitworks-cols > .col-sm-3
+{
+	margin-bottom: 50px;
 }
 
 #howitworks-cols h3
