--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -41,6 +41,8 @@ html, body
 	margin: 0px;
 	width: 100%;
 	height: 100%;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
 }
 
 h2
@@ -48,7 +50,7 @@ h2
 	padding: 0px;
 	margin: 0px;
 	padding-top: 30px;
-	font-size: 1.8em;
+	font-size: 2.2em;
 	font-family: 'Comfortaa', cursive;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -131,16 +133,19 @@ p
 
 #mainbar h1
 {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
 	
 	float: left;
 	font-size: 2.0em;
 
-	margin-left: 70px;
+	margin-left: 10px;
 	padding-top: 15px;
 
 	color: #fff;
+
+	display: inline-block;
+
 
 
 }
@@ -148,10 +153,11 @@ p
 
 #identity-logo
 {
-	margin: 0 auto;
 	padding: 0px;
 	margin: 0px;
 	margin-top: 15px;
+	display: inline-block;
+	float: left;
 }
 
 #mainbar-headerlinks
@@ -431,7 +437,7 @@ p
 #features-website-right
 {
 	color: #fff;
-	background-color: #83C5D1;
+	background-color: #245953; /*83C5D1 */
 	padding: 30px;
 }
 
@@ -505,7 +511,7 @@ p
 #features-customize-left
 {
 	color: #fff;
-	background-color: #83C5D1;
+	background-color: #245953; /*83C5D1 */
 	padding: 30px;
 
 }
